--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -167,6 +167,12 @@ Ext4.onReady(function(){
             queryName: 'tb_site',
             pk: 'value'
         },{
+            label: 'Calculated Status Field Values',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'calculated_status_codes',
+            pk: 'code'
+        },{
             label: 'Id Types',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
