snprc_ehr - updated look up values; cleaned up spelling

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -215,10 +215,10 @@ Ext4.onReady(function(){
             queryName: 'source',
             pk: 'code'
         },{
-            label: 'Acquistion Type',
+            label: 'Acquisition Type',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
-            queryName: 'acquistionType',
+            queryName: 'acquisitionType',
             pk: 'rowid'
         },{
             label: 'Misc Tests',
