--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -9,6 +9,7 @@
         Ext4.create('EHR.panel.AnimalHistoryPanel', {
             defaultReport: ctx.DefaultAnimalHistoryReport,
             defaultTab: 'General',
+            maxSubjectsToShow: 40,
             filterTypes: [{
                 xtype: 'ldk-singlesubjectfiltertype',
                 inputValue: LDK.panel.SingleSubjectFilterType.filterName,
