--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -59,7 +59,7 @@ Ext4.onReady(function(){
                 style: 'font-weight: bold;'
             },
             items: [
-                {name: 'Search By Area, Room, or Cage', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view#inputType:roomCage'}
+                {name: 'Search By Area or Room', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view#inputType:roomCage'}
             ]
         }]
     });
