--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -28,6 +28,7 @@
                 xtype: 'ehr-locationfiltertype',
                 inputValue: EHR.panel.LocationFilterType.filterName,
                 label: EHR.panel.LocationFilterType.label,
+                filterType: LABKEY.Filter.Types.EQUAL,
                 searchOptions: {
                     area: true,
                     room: true,
