Create custom SNPRC species lookup table

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -90,7 +90,7 @@ Ext4.onReady(function(){
         },{
             label: 'Species',
             populateFn: 'populateFromFile',
-            schemaName: 'ehr_lookups',
+            schemaName: 'snprc_ehr',
             queryName: 'species',
             pk: 'common'
         },{
