Temporary(?) data fix to allow creation of SNPRC projects

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -92,7 +92,7 @@ Ext4.onReady(function(){
             populateFn: 'populateFromFile',
             schemaName: 'snprc_ehr',
             queryName: 'species',
-            pk: 'common'
+            pk: 'species_code'
         },{
             label: 'source',
             populateFn: 'populateFromFile',
