--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -101,7 +101,7 @@ Ext4.onReady(function(){
         },{
             label: 'Species codes',
             populateFn: 'populateFromFile',
-            schemaName: 'ehr_lookup',
+            schemaName: 'ehr_lookups',
             queryName: 'species_codes',
             pk: 'rowid'
         },{
