--- a/snprc_ehr/resources/views/animalHistory.view.xml
+++ b/snprc_ehr/resources/views/animalHistory.view.xml
@@ -7,7 +7,7 @@
 
         <dependency path="ehr/panel/MultiAnimalFilterType.js"/>
         <dependency path="ehr/panel/LocationFilterType.js"/>
-        <dependency path="onprc_ehr/panel/AssignmentFilterType.js"/>
+        <!--<dependency path="onprc_ehr/panel/AssignmentFilterType.js"/>-->
 
         <dependency path="ehr/panel/AnimalHistoryPanel.js"/>
     </dependencies>
