snprc_ehr - Animal History->Daily Obs report reformatted, and supporting foreign key lookup table (housingStatus) added.

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -27,6 +27,12 @@ Ext4.onReady(function(){
 
     var tables = [
         {
+            label: 'Housing Status',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'housingStatus',
+            pk: 'value'
+        },{
             label: 'Clinical Observation Datasets',
             populateFn: 'populateFromFile',
             schemaName: 'snprc_ehr',
