--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -27,6 +27,12 @@ Ext4.onReady(function(){
 
     var tables = [
         {
+            label: 'Rearing Types',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'rearing_type',
+            pk: 'value'
+        },{
             label: 'Housing Status',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
