Commenting these out until we get the tsv files committed.  Causing test setup failure.

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -194,24 +194,24 @@ Ext4.onReady(function(){
             schemaName: 'ehr_lookups',
             queryName: 'urinalysis_qualitative_results',
             pk: 'rowid'
-        },{
-            label: 'Birth Type',
-            populateFn: 'populateFromFile',
-            schemaName: 'ehr_lookups',
-            queryName: 'birth_type',
-            pk: 'rowid'
-        },{
-/*            label: 'Birth Condition',
-            populateFn: 'populateFromFile',
-            schemaName: 'snprc_ehr',
-            queryName: 'birth_condition',   // need to define in snprc_ehr.sql
-            pk: 'rowid'
-        },{          */
-            label: 'Birth Date Type',
-            populateFn: 'populateFromFile',
-            schemaName: 'ehr_lookups',
-            queryName: 'birth_date_type',
-            pk: 'rowid'
+//        },{
+//            label: 'Birth Type',
+//            populateFn: 'populateFromFile',
+//            schemaName: 'ehr_lookups',
+//            queryName: 'birth_type',
+//            pk: 'rowid'
+//        },{
+///*            label: 'Birth Condition',
+//            populateFn: 'populateFromFile',
+//            schemaName: 'snprc_ehr',
+//            queryName: 'birth_condition',   // need to define in snprc_ehr.sql
+//            pk: 'rowid'
+//        },{          */
+//            label: 'Birth Date Type',
+//            populateFn: 'populateFromFile',
+//            schemaName: 'ehr_lookups',
+//            queryName: 'birth_date_type',
+//            pk: 'rowid'
         },{            label: 'Gender codes',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
