Issue 28408: There is a special case for converting spaces to underscores for this prc.  Updated the message with a center specific message that does not include spaces in the list of separators.

--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -35,7 +35,8 @@
                     colName: 'value',
                     idColumn: 'Id',
                     aliasColumn: 'alias'
-                }
+                },
+                multiSearchText: "IDs:<br><i>(Separated by commas, semicolons or line breaks)</i>"
             },{
                 xtype: 'ehr-locationfiltertype',
                 inputValue: EHR.panel.LocationFilterType.filterName,
