snprc - Changes made to study.encounters dataset and supporting files

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -315,6 +315,12 @@ Ext4.onReady(function(){
             queryName: 'encounter_roles',
             pk: 'rowid'
         },{
+            label: 'Encounter Types',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'encounter_types',
+            pk: 'rowid'
+        },{
             label: 'Blood Draw Tube Volumes',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
