snprc - added yesno.tsv and some usage

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -27,6 +27,12 @@ Ext4.onReady(function(){
 
     var tables = [
         {
+            label: 'Yes/No lookup',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'yesno',
+            pk: 'value'
+        },{
             label: 'Valid birth date status',
             populateFn: 'populateFromFile',
             schemaName: 'snprc_ehr',
