1. locations are now properly sorted (locations Tree View) 2. Added a new lookup table for Active vs Inactive 3. Added screens to edit/add/delete vets, birth and death codes using LDK grids

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -27,6 +27,12 @@ Ext4.onReady(function(){
 
     var tables = [
         {
+            label: 'Active/Inactive lookup',
+            populateFn: 'populateFromFile',
+            schemaName: 'ehr_lookups',
+            queryName: 'activeInactive',
+            pk: 'value'
+        },{
             label: 'Yes/No lookup',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
