--- a/snprc_ehr/resources/views/colonyOverview.html
+++ b/snprc_ehr/resources/views/colonyOverview.html
@@ -2,20 +2,19 @@
 
     Ext4.onReady(function(){
         var webpart = <%=webpartContext%>;
-        Ext4.create('EHR.panel.ColonyOverviewPanel', {
+        Ext4.create('SNPRC_EHR.panel.ColonyOverviewPanel', {
             getTabs: function(){
                 return [{
                     title: 'Population Composition',
                     style: 'padding 5px;',
                     items: [{
-                        xtype: 'ehr-populationpanel',
+                        xtype: 'snprc-ehr-populationpanel',
                         filterArray: this.filterArray,
-                        rowField: EHR.panel.PopulationPanel.FIELDS.species,
+                        rowField: SNPRC_EHR.panel.PopulationPanel.FIELDS.species,
                         colFields: [EHR.panel.PopulationPanel.FIELDS.ageclass, EHR.panel.PopulationPanel.FIELDS.gender]
                     }],
                     itemId: 'population'
-                }
-                    ,{
+                },{
                     title: 'Baboon Colony',
                     style: 'padding 5px;',
                     items: [{
