Fix home page webpart

--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -1,9 +1,7 @@
 <script type="text/javascript">
 
 Ext4.onReady(function(){
-    var webpart =;
-    <
-    %= webpartContext % >;
+    var webpart = <%=webpartContext%>;
     var ctx = EHR.Utils.getEHRContext(webpart.wrapperDivId);
     if(!ctx)
         return;
