snprc - tweaked font sizes

--- a/snprc_ehr/resources/views/_header.html
+++ b/snprc_ehr/resources/views/_header.html
@@ -1,18 +1,18 @@
 <div class="tac-title">
     <div class="old-theme">
-        <h2>Total Animal Care</h2>
+        <h2>Total Animal Care (TAC)</h2>
         <h3>Electronic Health Record System</h3>
         <p>Powered by LabKey</p>
     </div>
     <div class="bootstrap-theme">
         <div class="hidden-xs md-title lg-title">
             <br style="clear: both"/>
-            <h2>Total Animal Care</h2>
+            <h2>Total Animal Care (TAC)</h2>
             <h3>Electronic Health Record System</h3>
             <p>Powered by LabKey</p>
         </div>
         <div class="hidden-sm hidden-md hidden-lg sm-title">
-            <h2>Total Animal Care</h2>
+            <h2>Total Animal Care (TAC)</h2>
             <p>Powered by LabKey</p>
         </div>
     </div>
@@ -35,17 +35,20 @@
         text-align: center;
     }
 
-    .old-theme h2 {
-        font-size: 32px;
+    .old-theme h2, .bootstrap-theme h2 {
+        font-size: 22px;
         font-style: italic;
         margin: 2px 0;
     }
 
-    .old-theme h3 {
-        font-size: 25px;
+    .old-theme h3, .bootstrap-theme h3{
+        font-size: 20px;
         margin: 2px 0;
     }
-
+    .old-theme p, .bootstrap-theme p {
+        font-size: 16px;
+        margin: 2px 0;
+    }
     .labkey-main-title-area .labkey-main-title:hover {
         text-decoration: none;
     }
