--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -1,7 +1,9 @@
 <script type="text/javascript">
 
 Ext4.onReady(function(){
-    var webpart = <%=webpartContext%>;
+    var webpart =;
+    <
+    %= webpartContext % >;
     var ctx = EHR.Utils.getEHRContext(webpart.wrapperDivId);
     if(!ctx)
         return;
@@ -61,7 +63,7 @@ Ext4.onReady(function(){
             items: [
                 {name: 'Search By Area or Room', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view#inputType:roomCage'},
                 {
-                    name: 'View Animals By Locations, Groups, Projects',
+                    name: 'Animal Tree View Navigation',
                     url: '<%=contextPath%>/AnimalsHierarchy' + ctx['EHRStudyContainer'] + '/getView.view'
                 }
             ]
