snprc - Updated ehr_lookups.project_types for use with SND module

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -375,11 +375,11 @@ Ext4.onReady(function(){
             queryName: 'observation_areas',
             pk: 'rowid'
         },{
-            label: 'Project Type',
+            label: 'SND Project Types',
             populateFn: 'populateFromFile',
             schemaName: 'ehr_lookups',
             queryName: 'project_type',
-            pk: 'rowid'
+            pk: 'code'
         },{
             label: 'Project Use Categories',
             populateFn: 'populateFromFile',
